# oscam-svn

./: .cproject  CMakeLists.txt  Makefile  Maketype  OSCAM2.mm  README  config.c  config.cpp  config.h  config.sh  cthread.h  global-functions.h  global.h  globals.h  main.c  main.h  module-cacheex.c  module-camd33.c  module-camd35.c  module-cccam.c  module-dvbapi.c  module-dvbapi.h  module-monitor.c  module-newcamd.c  module-radegast.c  module-serial.c  module-stat.c  oscam-chk.c  oscam-config.c  oscam-config.h  oscam-http-helpers.c  oscam-http.c  oscam-http.h  oscam-log.c  oscam-reader.c  oscam-simples.c  oscam.c  reader-common.c  reader-common.h  reader-conax.c  (+12 more)
.github/workflows/: sync.yml
Documentation/example/: oscam.server
Documentation/man/: oscam.1  oscam.ac.5  oscam.conf.5  oscam.ird.5  oscam.server.5  oscam.user.5
Documentation/txt/: oscam.conf.txt  oscam.server.txt  oscam.txt  oscam.user.txt
cscrypt/: bn.h  bn_add.c  bn_asm.c  bn_ctx.c  bn_div.c  bn_exp.c  bn_lcl.h  bn_lib.c  bn_mul.c  bn_print.c  bn_shift.c  bn_sqr.c  bn_word.c  buffer.h  crc32.c  crc32.h  cscrypt.h  des.c  des.h  md5.c  md5.h  mem.c  openssl_mods.h
cscrypt/aes/: aes.h  aes_core.c
csctapi/: CMakeLists.txt  Makefile  apdu.c  apdu.h  atr.c  atr.h  cardterminal.c  cardterminal.h  config.h  config.h.dbg  ct_list.c  ct_list.h  ct_slot.c  ct_slot.h  ctapi.c  ctapi.h  ctbcs.h  defines.h  ftdi.c  ftdi.h  icc_async.c  icc_async.h  ifd.h  ifd_cool.c  ifd_phoenix.c  ifd_sc8in1.c  ifd_sc8in1.h  ifd_sci.c  ifd_sci.h  ifd_smartreader.c  ifd_smartreader.h  ifd_towitoko.c  ifd_towitoko.h  io_serial.c  io_serial.h  mc_global.h  pcscdefines.h  pps.c  pps.h  protocol_t0.c  (+7 more)
include/: ac.h  cache.h  card.h  chk.h  config.h  globals.h  log.h  monitor.h  nano.h  network.h  os-types.h  oscam.h  reader.h  simples.h
include/CAM/: common.h  conax.h  cryptoworks.h  irdeto.h  seca.h  viaccess.h  videoguard.h
include/reader/: common.h  serial.h
include/sharing/: camd33.h  camd35.h  newcamd.h  radegast.h  serial.h
saved_code/: .project  client.cpp  client.h  cthread.cpp  cthread.h  logger.cpp  logger.h  main.cpp  reader.h  simples.cpp
saved_code/tmp/: reader.h
src/: ac.c  cache.c  card.c  chk.c  config.c  globals.h  log.c  monitor.c  nano.c  network.c  oscam.c  reader.c  simples.c
src/CAM/: common.c  conax.c  cryptoworks.c  drecrypt.c  irdeto.c  seca.c  viaccess.c  videoguard.c  videoguard2.c
src/reader/: common.c  serial.c
tmp/: reader.c  reader.cpp  reader.h
(+16 files in other folders)
